maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: value SetDirection
   SetDirection(North)
   ^Escaper:12: error: not found: value North
   SetDirection(North)
                ^